<resources>
    <string name="app_name">Fuel Track</string>

    <string name="vehicle_prompt">Enter your new car\'s information:</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="vehicle_make">Vehicle Make</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="vehicle_year">Vehicle Year</string>
    <string name="vehicle_button_save">Save!</string>
    <string name="vehicle_button_back">Back</string>
    <string name="main_button_add_car">Add New Car</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="fuel_entry_recycler_item_placeholder">fuel entry recycler item</string>
    <string name="default_web_client_id">1044064229113-v06rrb28ghe96dgtgj3hrts35qflbtc9.apps.googleusercontent.com</string>
    <string name="cancel">Cancel</string>
    <string name="change_password">Change Password</string>
    <string name="main_activity_recycler_view_item">main activity recycler view item</string>
    <string name="vehicle_activity_recycler_item">vehicle activity recycler item</string>
    <string name="garage_add_vehicle_button">garage_add_vehicle_button</string>

</resources>